# Object-Detection-C-

./: CMakeLists.txt  readme.md
dnn/: dnnexample.cpp
src/: classifyImages.cpp  classifyImagesDNN.cpp  classifyImagesKNN.cpp  computeFeatures.cpp  imgDisplay.cpp  kmeans.cpp  morphologicalFilter.cpp  objectRecogFunctions.cpp  objectRecogFunctions.h  segmentImages.cpp  segmentImagesCV.cpp  threshold.cpp  trainingData.cpp  trainingDataDNN.cpp
